Fixed spacing in right div

--- a/css/style.css
+++ b/css/style.css
@@ -83,9 +83,17 @@ button {
 }
 
 .appStoreImages {
-  margin-top: 80px;
-
+  margin-top: -5px;
 }
+
+.paragraphs {
+  height: 240px;
+}
+
+.paragraphs p {
+  margin: 30px 0 30px 0;
+}
+
 .headline {
 	color: rgb(21,48,83);
 	margin: 40px 0 0 20px;
